# dota_tournament

./: .dockerignore  .env.dev  .env.example  .env.prod  .env.release  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  docker-compose-release.yaml  docker-compose.debug.m1.yaml  docker-compose.debug.yaml  docker-compose.release.yaml  docker-compose.yaml  mkdocs.yml  paths.py  pyproject.toml  tasks.py
.claude/: CLAUDE.md  settings.json  settings.local.json
.claude/agents/: docker-ops.md  inv-runner.md  mkdocs-documentation.md  python-backend.md  tester.md  typescript-frontend.md
.claude/hooks/: check-docs-sync.sh
.claude/skills/: mermaid-diagrams.md
.github/: copilot-instructions.md  thoughts.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/instructions/: copilot-instructions.md  cypress-instructions.md  frontend-instructions.md
.github/workflows/: build-test-db.yml  cypress.yml  docs.yml  playwright.yml  record-demos.yml  test.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  dev.db.sqlite3  package-lock.json  prod.db.sqlite3  pyproject.toml  pytest.ini  tasks.py  test.db.sqlite3
backend/app/: admin.py  apps.py  broadcast.py  consumers.py  decorators.py  mail.py  models.py  permissions_org.py  pipelines.py  routing.py  serializers.py  signals.py  views.py  views_joke.py  views_main.py
backend/backend/: asgi.py  settings.py  urls.py
backend/bracket/: urls.py
backend/common/: filters.py  utils.py
backend/config/: celery.py  leagues.py  leagues.yaml
backend/discordbot/: admin.py  apps.py  bot.py  embeds.py  models.py  tasks.py  tests.py  urls.py  utils.py  views.py
backend/dtx/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/example/: settings.py  urls.py
backend/steam/: models.py  serializers.py  tasks.py  urls.py  views.py
backend/telemetry/: __init__.py  celery.py  config.py  labels.py  logging.py  middleware.py  tracing.py  websocket.py
backend/tests/: conftest.py  populate.py  tasks.py  test_auth.py  test_demo.py  test_herodraft.py  test_models.py  test_steam.py  urls.py
docker/: .env.dev  .env.prod  .env.release  .env.test  docker-compose.debug.m1.yaml  docker-compose.debug.yaml  docker-compose.observability.yaml  docker-compose.prod.yaml  docker-compose.release.yaml  docker-compose.test.yaml
docs/: THEMING-GUIDE.md  index.md
docs/api/: endpoints.md
docs/architecture/: backend.md  docker.md  frontend.md  overview.md
docs/development/: backend-quickstart.md  contributing.md  invoke-tasks.md  testing.md
docs/features/: bracket.md  herodraft.md
docs/getting-started/: installation.md  quick-start.md
docs/plans/: 2025-01-31-user-presence-design.md  2026-01-01-docs-invoke-github-pages-design.md  2026-01-01-docs-invoke-github-pages.md  2026-01-02-docker-env-commands-design.md  2026-01-02-docs-sync-hook-design.md  2026-01-04-steam-match-processing-design.md  2026-01-04-steam-match-processing.md  2026-01-04-steam-mock-data-implementation.md  2026-01-04-tournament-bracket-design.md  2026-01-04-tournament-bracket-implementation.md  2026-01-05-bracket-redesign.md  2026-01-05-match-stats-display-design.md  2026-01-05-match-stats-display.md  2026-01-07-captain-draft-pick-design.md  2026-01-07-league-stats-auto-fetch-design.md  2026-01-07-league-stats-auto-fetch-implementation.md  2026-01-07-shuffle-draft-design.md  2026-01-07-shuffle-draft-ui-redesign.md  2026-01-09-bracket-badge-implementation.md  2026-01-09-bracket-save-placement-implementation.md  2026-01-10-bracket-match-linking-design.md  2026-01-10-bracket-match-linking-implementation.md  2026-01-10-discord-bot-design.md  2026-01-10-discord-bot-implementation.md  2026-01-11-logging-and-ci-optimization-design.md  2026-01-11-logging-and-ci-optimization-implementation.md  2026-01-12-draft-event-history-implementation.md  2026-01-16-captain-player-popovers-implementation.md  2026-01-17-organizations-leagues-design.md  2026-01-17-organizations-leagues-implementation.md  2026-01-18-league-page-tabs.md  2026-01-19-herodraft-captains-mode-design.md  2026-01-19-herodraft-captains-mode-implementation.md  2026-01-20-backend-telemetry-design.md  2026-01-20-backend-telemetry-implementation.md  2026-01-21-active-draft-context-design.md  2026-01-21-active-draft-context-implementation.md  2026-01-21-herodraft-cypress-e2e-design.md  2026-01-21-herodraft-cypress-e2e-implementation.md  2026-01-21-league-rating-design.md  (+21 more)
docs/testing/: playwright.md  test-tournaments.md
frontend/: .dockerignore  .gitignore  .prettierrc  Dockerfile  README.md  cypress.config.ts  docker-entrypoint-frontend.sh  eslint.config.js  package-lock.json  package.json  playwright.config.ts  playwright.demo.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/app/: app.css  index.ts  root.tsx  routes.ts  (+1 more)
nginx/: Dockerfile  default.template.backup.conf  default.template.conf  default.template.m1.conf  entrypoint.sh  nginx_http.template.conf
scripts/: docker.py  tests.py  update.py  utils.py  version.py
webui/: package-lock.json  package.json
(+678 files in other folders)
